# ocsf_ilf_translator

./: .gitignore  Cargo.toml  README.md  build.rs
ilf-ocsf-macro/: Cargo.toml
ilf-ocsf-macro/src/: lib.rs
ilf-ocsf-macro/tests/: test_parse_from_id.rs
src/: invalid_files.md  lib.rs  main.rs  ocsf_types.rs  serialize.rs  struct_fields.rs
tests/: test_ilf_conversion.rs  test_parsing.rs
tests/ocsf_json_messages/: invalid_protobuf_explanations.md  malware_infection_detected_sample_1.json  malware_infection_detected_sample_2.json  malware_infection_detected_sample_3.json  malware_infection_detected_sample_4.json
